--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body{
 }
 
 .top-container {
-  margin-top: 4.375rem;
+  margin-top: 7rem;
 }
 
 /*stats styling*/
@@ -57,6 +57,15 @@ body{
   display: flex;
   justify-content: space-around;
   font-size: 1.5rem;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+}
+
+.stat-title {
+  font-size: 1.25rem;
 }
 
 .green {
