--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 */
 html {
   font-size: 16px;
+  position: relative;
 }
 
 body{
@@ -83,10 +84,23 @@ body{
   color: #fff;
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 40px;
+  width: 100%;
 }
 
 .footer a,
 .footer a:hover {
   text-decoration: none;
   color: #fff;
+}
+
+.copyright {
+  text-align: left
+}
+
+.api-credit {
+  text-align: right
 }
