--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 body{
-    background-image: url(http://thepatternlibrary.com/img/ao.gif);
+    background-image: url(../images/ao.gif);
     font-family: 'Lato', sans-serif;
     color: #fff;
 }
@@ -25,7 +25,7 @@ body{
 
 .navbar {
   background-color: #fff;
-  border-bottom: 0.25rem solid white;
+  border: none;
 }
 
 .navbar-left,
@@ -43,8 +43,27 @@ body{
   text-decoration: none;
 }
 
+.navbar-right {
+  margin: 0;
+  height: 100%;
+  display: flex;
+}
+
+.navbar-nav>li>a {
+  color: #333;
+}
+
+.navbar-nav>li>a:hover {
+  color: #f4d35e;
+}
+
+.links {
+  display: flex;
+  margin: 0.4rem;
+}
+
 .top-container {
-  margin-top: 7rem;
+  margin-top: 5rem;
 }
 
 /*stats styling*/
@@ -77,6 +96,13 @@ body{
   color: #C62828;
 }
 
+/*chart styles*/
+.chart-section {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+}
+
 /*footer styles*/
 .footer {
   width: 100%;
@@ -91,10 +117,14 @@ body{
   width: 100%;
 }
 
-.footer a,
-.footer a:hover {
+.footer a {
   text-decoration: none;
   color: #fff;
+}
+
+.footer a:hover {
+  text-decoration: none;
+  color: #f4d35e;
 }
 
 .copyright {
