--- a/css/style.css
+++ b/css/style.css
@@ -224,3 +224,148 @@ a:hover {
     position: relative;
   }
 }
+
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .navbar-fixed-top {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navbar-left a,
+    .navbar-right,
+    .navbar,
+    .top-container {
+      margin: 0;
+    }
+
+    .about-title {
+      font-size: 3.5rem;
+      text-align: center;
+    }
+
+    .stats {
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .add-pad {
+      margin: 0;
+    }
+
+    .col-xs-6 {
+      margin: 1.5rem 0;
+    }
+
+    .footer {
+      margin: 2rem 0;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+    }
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    .navbar-fixed-top {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navbar-left a,
+    .navbar-right,
+    .navbar,
+    .top-container {
+      margin: 0;
+    }
+
+    .about-title {
+      font-size: 3.5rem;
+      text-align: center;
+    }
+
+    .stats {
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .add-pad {
+      margin: 0;
+    }
+
+    .col-xs-6 {
+      margin: 1.5rem 0;
+    }
+
+    .footer {
+      margin: 2rem 0;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+    }
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    .navbar-fixed-top {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navbar-left a,
+    .navbar-right,
+    .navbar,
+    .top-container {
+      margin: 0;
+    }
+
+    .about-title {
+      font-size: 3.5rem;
+      text-align: center;
+    }
+
+    .stats {
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .add-pad {
+      margin: 0;
+    }
+
+    .col-xs-6 {
+      margin: 1.5rem 0;
+    }
+
+    .footer {
+      margin: 2rem 0;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+    }
+}
