--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,21 @@ a:hover {
 
 /*responsive styles*/
 @media only screen and (max-width: 1000px) {
-  .current-price {
-    font-size: 3.5rem;
+  .navbar-left,
+  .navbar-left a {
+    margin: 0;
+    font-size: 7rem;
+    line-height: 1;
   }
-}
+  .current-price {
+    font-size: 5rem;
+  }
 
-@media only screen and (max-width: 767px ) {
+  .navbar-right {
+    margin: 0;
+    font-size: 1.75rem;
+  }
+
   .navbar-fixed-top {
     position: relative;
     display: flex;
@@ -195,12 +204,66 @@ a:hover {
   .top-container {
     margin: 0;
   }
+
+  .top-container {
+    margin: auto;
+  }
+
+  .about-text {
+    font-size: 1.5rem;
+  }
+
+  .stats {
+    flex-wrap: wrap;
+  }
+
+  .stat {
+    justify-content: space-between;
+  }
+
+  .stat-title {
+    font-size: 2rem;
+    margin-top: 1.5rem;
+  }
+
+  .chart-section {
+    margin-top: 3rem;
+  }
+
+  .add-pad {
+    margin: auto;
+  }
+
+  .footer {
+    margin: 2rem 0;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .current-price {
+    font-size: 4.5rem;
+  }
 }
 
 @media only screen and (max-width: 700px) {
+  .navbar-left a {
+    font-size: 5.5rem;
+  }
+
+  .current-price {
+    font-size: 4rem;
+  }
+
   .about-title {
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
+  }
+
+  .about-text {
+    font-size: 1.25rem;
   }
 
   .stats {
@@ -225,147 +288,67 @@ a:hover {
   }
 }
 
-/* ----------- iPhone 6 ----------- */
-
-/* Portrait and Landscape */
-@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    .navbar-fixed-top {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .navbar-left a,
-    .navbar-right,
-    .navbar,
-    .top-container {
-      margin: 0;
-    }
-
-    .about-title {
-      font-size: 3.5rem;
-      text-align: center;
-    }
-
-    .stats {
-      flex-direction: row;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-
-    .add-pad {
-      margin: 0;
-    }
-
-    .col-xs-6 {
-      margin: 1.5rem 0;
-    }
-
-    .footer {
-      margin: 2rem 0;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
-    }
+@media only screen and (max-width: 620px) {
+  .current-price {
+    font-size: 3.5rem;
+  }
 }
 
-/* Portrait */
-@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-    .navbar-fixed-top {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+@media only screen and (max-width: 550px) {
+  .navbar-left a {
+    font-size: 5rem;
+  }
 
-    .navbar-left a,
-    .navbar-right,
-    .navbar,
-    .top-container {
-      margin: 0;
-    }
+  .current-price {
+    font-size: 3rem;
+  }
 
-    .about-title {
-      font-size: 3.5rem;
-      text-align: center;
-    }
+  .stats {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .stats {
-      flex-direction: row;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
+  .stat {
+    margin: 0;
+  }
 
-    .add-pad {
-      margin: 0;
-    }
-
-    .col-xs-6 {
-      margin: 1.5rem 0;
-    }
-
-    .footer {
-      margin: 2rem 0;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
-    }
+  .stat-title {
+    font-size: 1.75rem;
+  }
 }
 
-/* Landscape */
-@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-    .navbar-fixed-top {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+@media only screen and (max-width: 500px) {
+  .navbar-left a {
+    font-size: 4.5rem;
+  }
 
-    .navbar-left a,
-    .navbar-right,
-    .navbar,
-    .top-container {
-      margin: 0;
-    }
+  .navbar-right {
+    font-size: 1.25rem;
+  }
 
-    .about-title {
-      font-size: 3.5rem;
-      text-align: center;
-    }
+  .about-title {
+    font-size: 2.75rem;
+  }
 
-    .stats {
-      flex-direction: row;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
+  .stat-title {
+    font-size: 1.5rem;
+  }
+}
 
-    .add-pad {
-      margin: 0;
-    }
+@media only screen and (max-width: 470px) {
+  .navbar-left a {
+    font-size: 3rem;
+  }
 
-    .col-xs-6 {
-      margin: 1.5rem 0;
-    }
+  .current-price {
+    font-size: 2rem;
+  }
 
-    .footer {
-      margin: 2rem 0;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
-    }
+  .about-title {
+    font-size: 2.5rem;
+  }
+
+  .chart-title {
+    font-size: 1.25rem;
+  }
 }
