--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ a:hover {
   font-size: 2.75rem;
   margin-left: 2rem;
   color: #333;
+  font-weight: 900;
   transition: color 0.75s;
   text-decoration: none;
 }
@@ -196,6 +197,7 @@ a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 11rem;
   }
 
   .navbar-left a,
