--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   font-size: 1.5rem;
-  align-items: center
+  align-items: center;
 }
 
 /*footer styles*/
@@ -174,6 +174,10 @@ a:hover {
   margin-right: 1rem;
 }
 
+.hide {
+  display: none;
+}
+
 /*responsive styles*/
 @media only screen and (max-width: 1000px) {
   .navbar-left,
@@ -182,8 +186,19 @@ a:hover {
     font-size: 7rem;
     line-height: 1;
   }
+
+  canvas {
+     width: 100% !important;
+     height: 500 !important;
+  }
+
   .current-price {
-    font-size: 5rem;
+    font-size: 5.65rem;
+    margin: 3rem 0 2rem 0;
+  }
+
+  .hide {
+    display: block;
   }
 
   .navbar-right {
@@ -227,16 +242,21 @@ a:hover {
   }
 
   .stat-title {
-    font-size: 3.5rem;
+    font-size: 5.5rem;
     margin-top: 1.5rem;
   }
 
   .stat-data {
-    font-size: 2.25rem;
+    font-size: 4.25rem;
+    margin-bottom: 1rem;
   }
 
   .chart-section {
     margin-top: 3rem;
+  }
+
+  .chart-title {
+    font-size: 2.75rem;
   }
 
   .add-pad {
@@ -253,6 +273,10 @@ a:hover {
 
   .copyright {
     margin-bottom: 1.75rem;
+  }
+
+  .api-credit {
+    margin-bottom: 5rem;
   }
 }
 
