--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ a:hover {
 .nav-pills>li.active>a,
 .nav-pills>li.active>a:hover,
 .open>.dropdown-toggle.btn-default:focus,
-.open>.dropdown-toggle.btn-default:hover {
+.open>.dropdown-toggle.btn-default:hover,
+.convert:hover {
   background-color: #f4d35e;
   color: #333;
 }
@@ -95,6 +96,18 @@ a:hover {
 .drop-title {
   margin: 1.25rem;
   color: #333;
+}
+
+#DGBinput {
+  color: #333;
+  margin: 0 0.5rem;
+  width: 90%;
+}
+
+.convert {
+  margin: 0 0.5rem;
+  border: 1px solid #333;
+  padding: 0.5rem;
 }
 
 .links {
@@ -232,6 +245,7 @@ a:hover {
 
   .wrench {
     margin: 0.125rem 0 0 0;
+    display: none !important;
   }
 
   .hide {
